--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".MovieDetailActivity">
+        <activity android:name=".ui.MovieDetailActivity">
         </activity>
+
+        <provider
+            android:authorities="com.tofallis.popularmovies"
+            android:name="com.tofallis.popularmovies.data.FavouritesContentProvider"
+            android:exported="false" />
     </application>
 
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
